# Palindrome

./: CMakeLists.txt  CMakePresets.json  README.md  StringOperations.cpp  StringOperations.h  main.cpp  test_StringOperations.cpp
.github/workflows/: ci.yml
